--- a/BlazorApp/Pages/CatGame.razor
+++ b/BlazorApp/Pages/CatGame.razor
@@ -1,5 +1,5 @@
 ﻿@page "/catgame"
-<p>Push start and get the cat to the ball :)</p>
+<p>Push start and get the cat to the ball (W,A,S,D) :)</p>
 <hr class="solid">
 <iframe src="https://astronomyara.com/CatMaze/index.html" width="900" height="600" style="border: none"></iframe>
 @code {
