--- a/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/Pages/Index.razor
@@ -3,7 +3,7 @@
 @using Newtonsoft.Json
 @inject HttpClient Http
 
-<h1 style="text-decoration: underline;position:center">My code toybox!</h1>
+<h2 style="text-decoration: underline;text-align: center;">My code toybox!</h2>
 <h5>* Code on display here is made to have an optimal time and space complexity (big O) *</h5>
 <p><strong>Examples :</strong></p>
 <p>(more code examples: <a href="https://leetcode.com/nova0/" target="_blank">leetcode</a>)</p>
