--- a/BlazorApp/wwwroot/css/app.css
+++ b/BlazorApp/wwwroot/css/app.css
@@ -1,5 +1,6 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+
 html, body {
     font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 }
@@ -184,4 +185,7 @@ app {
         /* Never collapse the sidebar for wide screens */
         display: block;
     }
+/*    .h1 {
+        font-family: "Tangerine", serif;
+    }*/
 }
