--- a/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/Pages/Index.razor
@@ -18,7 +18,19 @@
 
 <div><img src="@resdog" Style="width:300px" /></div>
 
+
 <div style="display:flex;flex-wrap:wrap; justify-content: center;">
+    <div class="card m-3" style="min-width: 18rem;max-width: 25.5%;">
+        <div class="card-header">
+            <a>Fluent UI Calendar Example</a>
+        </div>
+        <img class="card-img-top imageThumbnail" style="height:300px;" src="img/calendar.PNG" />
+        <div class="card-footer text-center">
+            <a href="/webdesign/index.html" target="_blank"
+               class="btn btn-primary m-1">View</a>
+        </div>
+    </div>
+
     <div class="card m-3" style="min-width: 15rem; max-width:25.5%; ">
         <div class="card-header">
             <a>ThreeSum</a>
@@ -39,7 +51,6 @@
                class="btn btn-primary m-1">View</a>
         </div>
     </div>
-
     <div class="card m-3" style="min-width: 15rem;max-width: 25.5%;">
         <div class="card-header">
             <a>PlusOne</a>
@@ -50,9 +61,8 @@
                class="btn btn-primary m-1">View</a>
         </div>
     </div>
-
-
 </div>
+
 @code
 {
     //[Parameter]
