--- a/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/Pages/Index.razor
@@ -26,7 +26,7 @@
         </div>
         <img class="card-img-top imageThumbnail" style="height:300px;" src="img/calendar.PNG" />
         <div class="card-footer text-center">
-            <a href="/webdesign/index.html" target="_blank"
+            <a href="/WebDesign/index.html" target="_blank"
                class="btn btn-primary m-1">View</a>
         </div>
     </div>
