Login and NabBar

--- a/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/Pages/Index.razor
@@ -33,6 +33,16 @@
 
     <div class="card m-3" style="min-width: 18rem; max-width:25.5%; ">
         <div class="card-header">
+            <a>Login with Azure AD</a>
+        </div>
+        <img class="card-img-top imageThumbnail" style="height:300px;" src="img/Login.PNG" />
+        <div class="card-footer text-center">
+            <a href="https://jolly-bush-0804d0d03.azurestaticapps.net/" target="_blank" class="btn btn-primary m-1">View</a>
+        </div>
+    </div>
+
+    <div class="card m-3" style="min-width: 18rem; max-width:25.5%; ">
+        <div class="card-header">
             <a>ThreeSum</a>
         </div>
         <img class="card-img-top imageThumbnail" style="height:300px;" src="img/ThreeSum.PNG" />
