--- a/BlazorApp/Shared/NavMenu.razor
+++ b/BlazorApp/Shared/NavMenu.razor
@@ -22,7 +22,7 @@
         {
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="" style="color:white" @onclick="() => expandSubNav = !expandSubNav">
-                    <span class="" style="color:white" aria-hidden="true"></span>  -BoxOne
+                    <span class="oi oi-list-rich" style="color:#ffc107" aria-hidden="true"></span>  -BoxOne
                 </NavLink>
             </li>
             @if (expandSubNav)
@@ -64,7 +64,7 @@
 
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="" style="color:white" @onclick="() => expandSubNavStringAlgo = !expandSubNavStringAlgo">
-                    <span class="" style="color:white" aria-hidden="true"></span>  -BoxTwo
+                    <span class="oi oi-list-rich" style="color:#ffc107" aria-hidden="true"></span>  -BoxTwo
                 </NavLink>
             </li>
             @if (expandSubNavStringAlgo)
@@ -113,7 +113,7 @@
         {
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="" style="color:white" @onclick="()=>expandSubNavBlazorMaps = !expandSubNavBlazorMaps">
-                    <span class="oi oi-list-rich" style="color:white" aria-hidden="true"></span> Blazor: Maps
+                    <span class="oi oi-list-rich" style="color:#ffc107" aria-hidden="true"></span> Blazor: Maps
                 </NavLink>
             </li>
             <li class="nav-item px-3">
