--- a/BlazorApp/wwwroot/css/app.css
+++ b/BlazorApp/wwwroot/css/app.css
@@ -89,7 +89,7 @@ app {
         }
 
             .sidebar .nav-item a.active {
-                background-color: rgba(255,255,255,0.25);
+                /*background-color: rgba(255,255,255,0.25);*/
                 color: white;
             }
 
@@ -189,3 +189,4 @@ app {
         font-family: "Tangerine", serif;
     }*/
 }
+
