--- a/BlazorApp/CodeComponents/SwapsPalindromeComponent.razor
+++ b/BlazorApp/CodeComponents/SwapsPalindromeComponent.razor
@@ -9,8 +9,8 @@
 </p>
 <hr />
 
-<p>Input = <input type="text" @bind="@str" /></p>
-<button class="btn btn-primary" @onclick="Callswaps">Get</button>
+<p>Input = <input type="text" @bind="@str" /> <button class="btn btn-primary" @onclick="Callswaps"> Get</button></p>
+
 <hr />
 <p>Output = @output</p>
 <div style="display:@display">
