--- a/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/Pages/Index.razor
@@ -6,7 +6,7 @@
 <h2 style="text-decoration: underline;text-align: center;">My code toybox!</h2>
 @*<h5>* The code displayed here is optimized for time and space complexity (big O). *</h5>*@
 <p>More code examples: <a href="https://leetcode.com/nova0/" target="_blank">leetcode</a></p>
-<p>NEW Toys: <a href="/palindromeswaps">Min Adj. Swaps to Make a Palindrome</a></p>
+<p>NEW Toys: <a href="/palindromeswaps">Min Adj. Swaps to Make a Palindrome</a>, <a href="/equalheight">Min Steps to Make Piles Equal Height</a></p>
 <hr class="solid">
 <h5 style="text-align:center">Call REST Api and display data</h5>
 <button class="btn btn-primary" @onclick="PrintWebApiResponse">Random joke :</button> - <button class="btn btn-primary" @onclick="PrintWebApiResponseCat">Random cat fact :</button> - <button class="btn btn-primary" @onclick="PrintWebApiResponseDog">Random internet dog picture :</button>
