--- a/BlazorApp/CodeComponents/SwapsPalindromeComponent.razor
+++ b/BlazorApp/CodeComponents/SwapsPalindromeComponent.razor
@@ -84,7 +84,7 @@
 @code {
     string str = "";
     int output;
-    string display = "none";
+    string display = "";
 
     public void Callswaps()
     {
